--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URL = "mongodb://127.0.0.1:27017/blockchain"
 JWT_SECRET=swasthik_super_secret_123
+EMAIL_USER=swasthik126@gmail.com
+EMAIL_PASS=fdsu pvgr qskz glvn
